syntax = "proto3";
package trc.serial;

message AssetReference
{
    string unique_path = 1;
}
